test/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruits-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-fruits-api-gateway
        protocol: HTTP
      hosts:
        - fruits.istio-succinctly.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - fruits.istio-succinctly.io
  gateways:
    - fruits-api-gateway
  http:
    - route:
        - destination:
            host: fruits-api-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fruits-api-deployment-v1
  namespace: micro-shake-factory
spec:
  selector:
    matchLabels:
      app: fruits-api
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: fruits-api
        version: "1"
    spec:
      containers:
        - name: fruits-api
          image: istiosuccinctly/fruits-api:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: http-fruits-api
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fruits-api-service
  namespace: micro-shake-factory
spec:
  selector:
    app: fruits-api
  ports:
    - name: http-fruits-api-service
      port: 80
      targetPort: http-fruits-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: juice-shop-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - juice-shop.istio-succinctly.io
  gateways:
    - juice-shop-api-gateway
  http:
    - route:
        - destination:
            host: juice-shop-api-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop-api-deployment
  namespace: micro-shake-factory
spec:
  selector:
    matchLabels:
      app: juice-shop-api
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: juice-shop-api
    spec:
      containers:
        - name: juice-shop-api
          image: istiosuccinctly/juice-shop-api:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: http-js-api
              containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-api-service
  namespace: micro-shake-factory
spec:
  selector:
    app: juice-shop-api
  ports:
    - name: http-js-api-service
      port: 80
      targetPort: http-js-api
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: juice-shop-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-juice-shop-api-gateway
        protocol: HTTP
      hosts:
        - juice-shop.istio-succinctly.io
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: micro-shake-factory
  labels:
    app: helloworld
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v1
  namespace: micro-shake-factory
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v1
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v1:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  namespace: micro-shake-factory
spec:
  selector:
    matchLabels:
      app: helloworld
      version: v2
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v2:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 30000
      name: ntcp
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
  namespace: micro-shake-factory
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
